# boxing_dynamics

./: .gitignore  README.md  app.py  explore.ipynb  main.py  main_ORIGINAL.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-huggingface.yml
pipeline/: add_arrows.py  boxing_metrics.py  kinematics_extractor.py  landmarking.py  pipeline.py  video_loader.py  video_ouput.py
utils/: joints.py  videoProcessingFunctions.py
