[project]
name = "boxing-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.6",
    "mediapipe>=0.10.14",
    "opencv-python>=4.12.0.88",
    "pyvista>=0.46.3",
]
